gitops/petclinic/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: petclinic
  namespace: petclinic
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels: { app: petclinic }
  template:
    metadata:
      labels: { app: petclinic }
    spec:
      containers:
        - name: petclinic
          image: arpittrivedi0203545/petclinic:latest  
          ports: [{ containerPort: 8080 }]
          readinessProbe: { httpGet: { path: /actuator/health, port: 8080 }, initialDelaySeconds: 40, periodSeconds: 10 }
          livenessProbe:  { httpGet: { path: /actuator/health, port: 8080 }, initialDelaySeconds: 60, periodSeconds: 20 }
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: { duration: 60 }          
        - analysis:                        
            templates: [{ templateName: petclinic-success-rate }]
        - setWeight: 50
        - pause: { duration: 60 }
        - setWeight: 100
