gitops/petclinic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: petclinic
spec:
  selector: { app: petclinic }
  ports: [{ port: 80, targetPort: 8080 }]
